src/index.css
* {
    padding: 0;
    margin: 0;
    box-sizing: border-box;
}

body {
    font-family: sans-serif;
    min-height: 100vh;
    background-color: #181A1A;
    color: white;
    scrollbar-gutter: stable;
}

.navbar {
    display: flex;
    justify-content: center;
    align-items: center;
    gap: 30px;
    background-color: rgb(146, 16, 16);
    margin-bottom: 10px;
    position: relative;
    z-index: 99;
    box-shadow: 3px 6px 11px 2px rgba(0, 0, 0, 0.23);
}

.navbar a {
    text-decoration: none;
    color: white;
    font-weight: 500;
    transition: opacity 0.7s ease;
}

.navbar a:hover {
    opacity: 0.5;
}

.navbar a.active {
    font-weight: bold;
}

.nav-logo {
    height: 70px;
}

.link-logo {
    display: flex;
    align-items: center;
}

.container-boxed {
    max-width: 1200px;
    margin: 0 auto;
}

.card-container {
    display: flex;
    flex-wrap: wrap;
    gap: 20px;
    padding: 20px;
}

.card {
    display: flex;
    justify-content: space-between;
    height: 220px;
    width: 250px;
    background-color: rgb(224, 224, 224);
    color: #181A1A;
    flex-direction: column;
    border: 1px solid #ddd;
    border-radius: 8px;
    padding: 15px;
}

.card-buttons {
    display: flex;
    gap: 10px;
}

.btn {
    display: inline-block;
    width: 110px;
    padding: 8px 4px;
    font-size: 0.85rem;
    font-weight: 500;
    text-align: center;
    text-decoration: none;
    border-radius: 8px;
    border: 1px solid #d1d5db;
    background-color: #f3f4f6;
    color: #181A1A;
    transition: all 0.3s ease;
    cursor: pointer;
}

.btn:hover {
    opacity: 0.7;
}

.btn-detail {
    background-color: #f3f4f6;
    width: 100%;
}

.btn-fav {
    background-color: #f3f4f6;
    color: #374151;
}

.btn-fav.active-fav {
    background-color: rgb(146, 16, 16);
    border-color: rgb(146, 16, 16);
    color: white;
}

.btn-wrapper {
    display: flex;
    flex-direction: column;
    gap: 8px;
    width: 100%;
}

input {
    width: 200px;
    border-radius: 10px;
    padding: 10px;
    transition: opacity 0.5s ease;
    border-color: rgb(146, 16, 16);
}

select {
    border-radius: 10px;
    padding: 10px;
}

select:hover {
    cursor: pointer;
}

.search-filter-vehicle {
    display: flex;
    flex-wrap: wrap;
    gap: 20px;
    padding: 22px;
}

